# ChaCha20

./: .gitignore  CMakeLists.txt  LICENSE  README.md
C/: README.md  makefile
C++/: README.md  makefile
C++/src/: ChaCha20.cpp  ChaCha20.h
C++/tests/: test.cpp  test2.cpp
C/src/: ChaCha20.c
C/tests/: test.c  test2.c
src/: ChaCha20.c  ChaCha20.h  chacha20.c  chacha20.cpp  chacha20.h  chacha20.hpp  chacha20_common.h
tests/: speedtest.c  speedtest.cpp  test.c  test2.c  validity_check.cpp
